--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,31 @@ services:
     image: postgres:13
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: market_db
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: mydatabase
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d mydatabase"]
+      interval: 10s
+      retries: 5
+      start_period: 10s
+      timeout: 5s
 
   web:
     build: .
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
       - .:/app
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
-      DATABASE_URL: "postgresql+asyncpg://postgres:password@db/market_db"
+      DATABASE_URL: "postgresql+asyncpg://postgres:postgres@db:5432/mydatabase"
+
+volumes:
+  postgres_data:
