--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-fastapi
-uvicorn[standard]
-sqlalchemy
-asyncpg
-psycopg2-binary
-pydantic
-passlib[bcrypt]
-python-multipart
-aiohttp
-email-validator
+fastapi==0.95.0
+uvicorn==0.22.0
+SQLAlchemy==2.0.20
+asyncpg==0.28.0
+aiohttp==3.8.5
+passlib[bcrypt]==1.7.4
