Проблемы с бд и kafka

--- a/alembic.ini
+++ b/alembic.ini
@@ -1,7 +1,7 @@
 # A generic, single database configuration.
 [alembic]
 script_location = alembic
-sqlalchemy.url = postgresql+asyncpg://postgres:postgres@db:5432/mydatabase
+sqlalchemy.url = postgresql+psycopg2://postgres:postgres@localhost/mydatabase
 
 
 
